--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,34 +1,19 @@
-
-/* estilos.css */
+/* styles.css */
 
 /* Importar los estilos de las fuentes */
 @import "fonts.css";
 
 /* Importar los estilos del encabezado */
 @import "header.css";
-
-/* Importar los estilos del Bienvenida */
-@import "bienvenida.css";
-
-/* Importar los estilos del Autor */
 @import "autor.css";
-
-/* Importar los estilos del Autor */
-@import "recomendada.css";
-
-/* Importar los estilos del Autor */
-@import "contacto.css";
-
-/* Importar los estilos del Autor */
+@import "bienvenida.css";
 @import "blog.css";
-
-/* Importar los estilos del Autor */
+@import "contacto.css";
 @import "desafios.css";
-
-/* Importar los estilos del Autor */
 @import "lecturas.css";
-
-/* Importar los estilos del Autor */
+@import "recomendada.css";
 @import "redesfooter.css";
 
 
+
+/*# sourceMappingURL=estilos.css.map */
