incluyo cambios responsive, estructura Sass y observaciones del tutor

--- a/css/desafios.css
+++ b/css/desafios.css
@@ -31,7 +31,7 @@
     background-color: #f0f0f0;
     border: 1px solid #ccc;
     border-radius: 4px;
-    padding: 20px;
+    padding: 10px;
     text-align: center;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     display: flex;
@@ -62,6 +62,7 @@
   .boton-leer-mas-desafio {
     display: inline-block;
     margin-top: 10px;
+    margin-bottom: 20px;
     padding: 8px 16px;
     background-color: #2c3136;
     color: #fff;
@@ -74,7 +75,7 @@
   }
   
   /* Media queries para adaptar estilos a tablets y celulares */
-  @media (max-width: 768px) {
+  @media (width: 400px) {
     .grid-container-desafio {
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Ajustar el tamaño de las columnas para pantallas más pequeñas */
       max-width: 100%; /* El ancho máximo será el 100% en pantallas más pequeñas */
