--- a/css/header.css
+++ b/css/header.css
@@ -1,6 +1,6 @@
 /* Estilos para el encabezado */
 header {
-    background: linear-gradient(90deg, rgb(12, 3, 180) 0%, rgb(230, 42, 42) 0%, rgb(18, 24, 26) 98%);
+    background:rgb(5, 180, 238);
     font-family: 'EB Garamond', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: flex;
     align-items: center;
@@ -12,9 +12,8 @@ header {
   /* Estilos para el logo */
   header img {
     width: 100px;
-    height: 100px;
+    height: 100px;  
     border-radius: 50%;
-    align-items: right;
   }
   
   /* Estilos para la lista de navegación */
@@ -25,12 +24,18 @@ header {
   
   
   .nav li {
-    margin-right: 20px;
+    margin-right: 50px;
   }
   
+
+  .social-icon {
+    margin-left: 10px; 
+  }
+
+
   /* Media Query para dispositivos con un ancho máximo de 768px */
   
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 320px) {
     header {
       flex-direction: column;
       justify-content: center;
