--- a/css/autor.css
+++ b/css/autor.css
@@ -1,106 +1,66 @@
+/* Estilos CSS para Autor */
+.contenedor-autor {
+  display: flex;
+  flex-direction: column; 
+  width: 40%; 
+  padding: 20px;
+  border-radius: 5px;
+  background: linear-gradient(90deg, rgb(2, 243, 175) 0%, rgb(184, 212, 228) 0%, rgba(0, 212, 255, 1) 98%);
+  border: 20px solid #ccc;
+  opacity: 0;
+  animation: aparecer 1s forwards;
+  margin: auto;
+}
 
-  
-  
-  /* --------------------------------------------------------------------Estilos CSS  para Autor --------------------------------------------------------------------------------------------*/
-  
-  .contenedor-autor{
-    display: flex;
-    grid-template-columns: 1fr 3fr;
-    background-color: #ffffff;
-    padding: 20px;
-    border: 3px solid #ccc;
-    border-radius: 5px;
-    background: rgb(2,0,36);
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(1,67,105,1) 0%, rgba(0,212,255,1) 98%);
-    
-  
-  }
-  .autor-titulo  {
-    font-family: 'EB Garamond', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    height: 50px;
-    font-size: 50px;
-    color: rgb(42, 62, 62);
-    display: flex;
-    justify-content: center;
-    border-radius: 5px;
-    margin-bottom: 20px;
-  }
-  
-  .autor-fav {
-    font-size: 20px;
-    color: #0e0d0d;
-    padding-right: 30%;
-  }
-  
-  a.video {
-    text-decoration: underline;
-    color: blue;
-    cursor: pointer;
-  }
-  
-  .imagen1 {
-    width: 250px;
-    height: auto;
-    padding: 10px;
-    border-radius: 15%;
-  }
-  
-  
-  
-  @keyframes aparecer1 {
-    0% {
-      opacity: 0;
-      transform: translateX(-20px);
-    }
-  
-    100% {
-      opacity: 1;
-      transform: translateX(0);
-    }
-  }
-  
-  .contenedor-aparecer-autor1 {
-    opacity: 0;
-    transform: translateX(-40px);
-    animation: aparecer1 1s ease-in-out forwards;
-  }
-  
-  /* ------------------Estilos CSS mobile para Autor --------------------------------------------------------------------------------------------*/
+.autor-titulo  {
+  font-family: 'EB Garamond', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 28px; 
+  color: rgb(42, 62, 62);
+  display: flex;
+  justify-content: center;
+  border-radius: 5px;
+  margin-bottom: 20px;
+}
 
-/* Estilos para pantallas más pequeñas (dispositivos móviles) */
-@media screen and (max-width: 767px) {
+.autor-fav {
+  font-size: 14px; 
+  color: #0e0d0d;
+  text-align: center;   
+}
+
+.imagen1 {
+  width: 80%; 
+  padding: 40px; 
+  padding-left: 20%;
+}
+
+.video {
+  margin-left: 20%;
+}
+
+/* Media Query  */
+@media screen and (max-width: 400px) {
   .contenedor-autor {
-    flex-direction: column; /* Cambia la dirección de la flexbox a columna */
+    width: 90%; /* Cambia el ancho del contenedor al 90% del ancho de la pantalla */
     padding: 10px; /* Reduce el padding para dispositivos más pequeños */
+    margin-top: 10px; /* Ajusta el margen superior para separar del contenido anterior */
   }
 
   .autor-titulo {
-    font-size: 30px; /* Ajusta el tamaño del título para dispositivos más pequeños */
-    margin-bottom: 10px;
+    font-size: 24px; /* Reduce el tamaño del texto en dispositivos más pequeños */
   }
 
   .autor-fav {
-    font-size: 16px; /* Ajusta el tamaño del texto de autor-fav para dispositivos más pequeños */
-    padding-right: 0; /* Elimina el padding derecho */
-    text-align: center; /* Centra el texto en dispositivos más pequeños */
+    font-size: 12px; /* Reduce el tamaño del texto en dispositivos más pequeños */
   }
 
   .imagen1 {
-    width: 150px; /* Reduce el tamaño de la imagen para dispositivos más pequeños */
-    height: auto;
-    padding: 10px;
-    border-radius: 10%; /* Ajusta el radio de la esquina para que sea más suave */
-  }
-
-  .contenedor-aparecer-autor1 {
-    transform: translateX(0); /* Anula la animación para dispositivos más pequeños */
-    opacity: 1; /* Asegura que el contenido sea visible */
+    width: 100%; /* La imagen ocupará todo el ancho del contenedor en dispositivos más pequeños */
+    padding: 10px; /* Reduce el padding para dispositivos más pequeños */
+    padding-left: 0; /* Ajusta el padding izquierdo a cero */
   }
 }
 
-/* Estilos para tabletas (pantallas medianas) */
-@media screen and (min-width: 768px) and (max-width: 1023px) {
-  .autor-titulo {
-    font-size: 40px; /* Ajusta el tamaño del título para tabletas */
-  }
-}
+  
+
+
