--- a/css/bienvenida.css
+++ b/css/bienvenida.css
@@ -1,23 +1,42 @@
 /* -----------------------------------------------------------------------Estilos CSS para bienvenida ---------------------------------------------------------------------------------*/
 
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
 
-
-
-.contenedor-libro {
-  font-family: 'EB Garamond', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+.contenedor-bienvenida {
+  height: 50%;
   display: flex;
-  width: 100%;
   align-items: center;
   justify-content: center;
-  padding: 80px;
+}
+
+.contenedor-libro-bienvenida {
+  font-family: 'EB Garamond', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  display: flex;
+  flex-direction: column; /* Cambiar a columna en dispositivos móviles */
+  width: 100%; /* El contenedor ocupará todo el ancho disponible en dispositivos más pequeños */
+  max-width: 600px; /* Limita el ancho máximo para mantener legibilidad en pantallas grandes */
+  align-items: center;
+  justify-content: center;
+  padding: 20px; /* Reduce el padding para dispositivos más pequeños */
   border-radius: 10px;
   border: 20px solid #ccc;
   opacity: 0;
   animation: aparecer 1s forwards;
+  margin: auto; 
+}
+
+@keyframes aparecer {
+  to {
+    opacity: 1;
+  }
 }
 
 .bienvenido {
-  font-size: 34px;
+  font-size: 24px; /* Ajustar el tamaño del texto para dispositivos móviles */
   color: #333;
   margin-bottom: 10px;
   font-family: 'Montserrat', sans-serif;
@@ -26,7 +45,7 @@
 }
 
 .titulo {
-  font-size: 18px;
+  font-size: 20px; /* Ajustar el tamaño del texto para dispositivos móviles */
   color: #666;
   text-align: center;
   margin-bottom: 20px;
@@ -34,14 +53,15 @@
 
 .botones {
   display: flex;
-  justify-content: center;
+  flex-direction: column; /* Cambiar a columna en dispositivos móviles */
+  align-items: center; /* Centrar horizontalmente los botones en dispositivos móviles */
 }
 
 .btn-challenge {
   font-family: 'Montserrat', sans-serif;
   border: 1px solid #ccc;
   padding: 10px 20px;
-  margin: 0 10px;
+  margin: 5px 0; /* Añadir espacio entre los botones en dispositivos móviles */
   transition: border-color 0.3s;
   cursor: pointer;
 }
@@ -54,20 +74,3 @@
 
 
  
-  /* Media Query para dispositivos móviles y tabletas */
-  @media screen and (max-width: 768px) {
-    .contenedor-titulo {
-      width: 100%; /* El contenedor ocupará todo el ancho disponible en dispositivos más pequeños */
-      height: auto; /* La altura se ajustará automáticamente al contenido */
-      max-width: 400px; /* Limita el ancho máximo en dispositivos móviles y tabletas */
-    }
-  
-    .imagen-contenedor-bienvenido {
-      justify-content: flex-start; /* Alinea la imagen al principio del contenedor */
-    }
-  
-    .bienvenido {
-      font-size: 28px; /* Reduce el tamaño del texto en dispositivos más pequeños */
-      margin-bottom: 5px; /* Reduce el margen inferior del texto en dispositivos más pequeños */
-    }
-  }
