--- a/css/recomendada.css
+++ b/css/recomendada.css
@@ -1,86 +1,88 @@
 /* -------------------------------------------------Estilos CSS para lectura recomendada del mes ------------------------------------------------------------------------------------*/
+
 .contenedor-libro {
-    font-family: 'EB Garamond', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    display: flex;
-    width: 100%;
-    align-items: center;
-    justify-content: center;
-    padding: 80px;
-    border-radius: 10px;
-    border: 10px solid #ccc;
+  font-family: 'EB Garamond', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 80px;
+  border: 10px solid #ccc;
+  opacity: 0;
+  animation: aparecer 1s forwards;
+  font-family: 'EB Garamond', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  display: flex;
+  width: 61%;
+  border-radius: 10px;
+  border: 20px solid #ccc;
+  animation: aparecer 1s forwards;
+  margin: auto; 
+  margin-top: 33px;
+  margin-bottom: 25px;
+}
+
+@keyframes aparecer {
+  to {
+    opacity: 1;
+  }
+}
+
+.malaz {
+  width: 250px;
+  height: auto;
+  padding: 10px;
+  border-radius: 15%;
+}
+
+.texto-recomendado {
+  font-size: 20px;
+  color: rgb(42, 62, 62);
+}
+
+.contenido-libro {
+  flex: 1; /* Para que ocupe el espacio restante en el contenedor */
+  padding: 0 20px; 
+}
+
+.imagen-libro {
+  flex-basis: 250px; /* Tamaño fijo para la imagen */
+  display: flex;
+  justify-content: flex-end; /* Alineamos la imagen a la derecha */
+  align-items: center; /* Centramos verticalmente la imagen */
+}
+
+@keyframes aparecer {
+  from {
     opacity: 0;
-    animation: aparecer 1s forwards;
+    transform: translateX(-50px);
   }
-  
-  .malaz {
-    width: 250px;
-    height: auto;
-    padding: 10px;
-    border-radius: 15%;
+  to {
+    opacity: 1;
+    transform: translateY(0);
   }
-  
-  .texto-recomendado {
-    font-size: 20px;
-    color: rgb(42, 62, 62);
-  }
-  
-  .contenido-libro {
-    flex: 1; /* Para que ocupe el espacio restante en el contenedor */
-    padding: 0 20px; 
-  }
-  
-  .imagen-libro {
-    flex-basis: 250px; /* Tamaño fijo para la imagen */
-    display: flex;
-    justify-content: flex-end; /* Alineamos la imagen a la derecha */
-    align-items: center; /* Centramos verticalmente la imagen */
-  }
-  
-  @keyframes aparecer {
-    from {
-      opacity: 0;
-      transform: translateX(-50px);
-    }
-    to {
-      opacity: 1;
-      transform: translateY(0);
-    }
-  }
-  
+}
+
   /* -------------------------------------------------Estilos CSS Mobile  para lectura recomendada del mes ------------------------------------------------------------------------------------*/
   
   
-  /* Estilos para pantallas más pequeñas (dispositivos móviles) */
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: 739px) {
     .contenedor-libro {
-      flex-direction: column; /* Cambia la dirección de la flexbox a columna */
-      padding: 10px; /* Reduce el padding para dispositivos más pequeños */
+      flex-direction: column; 
+      padding: 40px; 
     }
   
     .malaz {
-      width: 150px; /* Reduce el tamaño de la imagen para dispositivos más pequeños */
+      width: 150px; 
       height: auto;
-      padding: 5px; /* Reduce el padding para dispositivos más pequeños */
-      border-radius: 10%; /* Ajusta el radio de la esquina para que sea más suave */
+      padding: 5px; 
+      border-radius: 10%; 
     }
   
     .contenido-libro {
-      padding: 10px; /* Reduce el espacio entre el texto y la imagen */
+      padding: 10px; 
     }
   
     .imagen-libro {
-      flex-basis: 100%; /* Asegura que la imagen ocupe todo el ancho del contenedor */
-      justify-content: center; /* Centra la imagen horizontalmente */
+      flex-basis: 100%; 
+      justify-content: center; 
     }
   }
-  
-  /* Estilos para tabletas (pantallas medianas) */
-  @media screen and (min-width: 768px) and (max-width: 1023px) {
-    .malaz {
-      width: 200px; /* Ajusta el tamaño de la imagen para tabletas */
-      height: auto;
-      padding: 10px;
-      border-radius: 10%;
-    }
-  }
-  
