--- a/css/autor.css
+++ b/css/autor.css
@@ -1,8 +1,8 @@
 /* Estilos CSS para Autor */
 .contenedor-autor {
   display: flex;
-  flex-direction: column; 
-  width: 40%; 
+  flex-direction: column;
+  width: 40%;
   padding: 20px;
   border-radius: 5px;
   background: linear-gradient(90deg, rgb(2, 243, 175) 0%, rgb(184, 212, 228) 0%, rgba(0, 212, 255, 1) 98%);
@@ -12,9 +12,9 @@
   margin: auto;
 }
 
-.autor-titulo  {
+.autor-titulo {
   font-family: 'EB Garamond', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 28px; 
+  font-size: 28px;
   color: rgb(42, 62, 62);
   display: flex;
   justify-content: center;
@@ -23,14 +23,14 @@
 }
 
 .autor-fav {
-  font-size: 14px; 
+  font-size: 14px;
   color: #0e0d0d;
-  text-align: center;   
+  text-align: center;
 }
 
 .imagen1 {
-  width: 80%; 
-  padding: 40px; 
+  width: 80%;
+  padding: 40px;
   padding-left: 20%;
 }
 
@@ -41,26 +41,30 @@
 /* Media Query  */
 @media screen and (max-width: 400px) {
   .contenedor-autor {
-    width: 90%; /* Cambia el ancho del contenedor al 90% del ancho de la pantalla */
-    padding: 10px; /* Reduce el padding para dispositivos más pequeños */
-    margin-top: 10px; /* Ajusta el margen superior para separar del contenido anterior */
+    width: 90%;
+    /* Cambia el ancho del contenedor al 90% del ancho de la pantalla */
+    padding: 10px;
+    /* Reduce el padding para dispositivos más pequeños */
+    margin-top: 10px;
+    /* Ajusta el margen superior para separar del contenido anterior */
   }
 
   .autor-titulo {
-    font-size: 24px; /* Reduce el tamaño del texto en dispositivos más pequeños */
+    font-size: 24px;
+    /* Reduce el tamaño del texto en dispositivos más pequeños */
   }
 
   .autor-fav {
-    font-size: 12px; /* Reduce el tamaño del texto en dispositivos más pequeños */
+    font-size: 12px;
+    /* Reduce el tamaño del texto en dispositivos más pequeños */
   }
 
   .imagen1 {
-    width: 100%; /* La imagen ocupará todo el ancho del contenedor en dispositivos más pequeños */
-    padding: 10px; /* Reduce el padding para dispositivos más pequeños */
-    padding-left: 0; /* Ajusta el padding izquierdo a cero */
+    width: 100%;
+    /* La imagen ocupará todo el ancho del contenedor en dispositivos más pequeños */
+    padding: 10px;
+    /* Reduce el padding para dispositivos más pequeños */
+    padding-left: 0;
+    /* Ajusta el padding izquierdo a cero */
   }
 }
-
-  
-
-
