--- a/css/bienvenida.css
+++ b/css/bienvenida.css
@@ -1,6 +1,7 @@
 /* -----------------------------------------------------------------------Estilos CSS para bienvenida ---------------------------------------------------------------------------------*/
 
-html, body {
+html,
+body {
   height: 100%;
   margin: 0;
   padding: 0;
@@ -16,17 +17,21 @@ html, body {
 .contenedor-libro-bienvenida {
   font-family: 'EB Garamond', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   display: flex;
-  flex-direction: column; /* Cambiar a columna en dispositivos móviles */
-  width: 100%; /* El contenedor ocupará todo el ancho disponible en dispositivos más pequeños */
-  max-width: 600px; /* Limita el ancho máximo para mantener legibilidad en pantallas grandes */
+  flex-direction: column;
+  /* Cambiar a columna en dispositivos móviles */
+  width: 100%;
+  /* El contenedor ocupará todo el ancho disponible en dispositivos más pequeños */
+  max-width: 600px;
+  /* Limita el ancho máximo para mantener legibilidad en pantallas grandes */
   align-items: center;
   justify-content: center;
-  padding: 20px; /* Reduce el padding para dispositivos más pequeños */
+  padding: 20px;
+  /* Reduce el padding para dispositivos más pequeños */
   border-radius: 10px;
   border: 20px solid #ccc;
   opacity: 0;
   animation: aparecer 1s forwards;
-  margin: auto; 
+  margin: auto;
 }
 
 @keyframes aparecer {
@@ -36,7 +41,8 @@ html, body {
 }
 
 .bienvenido {
-  font-size: 24px; /* Ajustar el tamaño del texto para dispositivos móviles */
+  font-size: 24px;
+  /* Ajustar el tamaño del texto para dispositivos móviles */
   color: #333;
   margin-bottom: 10px;
   font-family: 'Montserrat', sans-serif;
@@ -45,7 +51,8 @@ html, body {
 }
 
 .titulo {
-  font-size: 20px; /* Ajustar el tamaño del texto para dispositivos móviles */
+  font-size: 20px;
+  /* Ajustar el tamaño del texto para dispositivos móviles */
   color: #666;
   text-align: center;
   margin-bottom: 20px;
@@ -53,15 +60,18 @@ html, body {
 
 .botones {
   display: flex;
-  flex-direction: column; /* Cambiar a columna en dispositivos móviles */
-  align-items: center; /* Centrar horizontalmente los botones en dispositivos móviles */
+  flex-direction: column;
+  /* Cambiar a columna en dispositivos móviles */
+  align-items: center;
+  /* Centrar horizontalmente los botones en dispositivos móviles */
 }
 
 .btn-challenge {
   font-family: 'Montserrat', sans-serif;
   border: 1px solid #ccc;
   padding: 10px 20px;
-  margin: 5px 0; /* Añadir espacio entre los botones en dispositivos móviles */
+  margin: 5px 0;
+  /* Añadir espacio entre los botones en dispositivos móviles */
   transition: border-color 0.3s;
   cursor: pointer;
 }
@@ -70,7 +80,3 @@ html, body {
   border-color: #ff0000;
   color: #000000;
 }
-
-
-
- 
