--- a/css/blog.css
+++ b/css/blog.css
@@ -1,91 +1,90 @@
-
-
 /* -------------------------------------------------------------------------------Estilos blog -----------------------------------------------------------------------------------------------*/
 
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f8f8f8;
-    margin: 0;
-    padding: 0;
-  }
-  
+  font-family: Arial, sans-serif;
+  background-color: #f8f8f8;
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  margin: -10px;
+}
+
+.col-lg-6,
+.col-md-8,
+.col-lg-3,
+.col-md-2,
+.col-lg-2 {
+  flex-basis: 0;
+  flex-grow: 1;
+  max-width: 100%;
+  padding: 10px;
+}
+
+.entrada {
+  padding: 20px;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.titulo {
+  font-size: 18px;
+  color: #333;
+  margin-bottom: 10px;
+}
+
+.contenido {
+  font-size: 14px;
+  color: #666;
+  line-height: 1.5;
+}
+
+.custom-button {
+  display: inline-block;
+  margin-top: 10px;
+  padding: 8px 16px;
+  background-color: #c5b07c;
+  color: #111;
+  text-decoration: none;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.custom-button:hover {
+  background-color: #f7dfa5;
+}
+
+/* Media queries para adaptar estilos a celulares y tablets */
+@media (max-width: 400px) {
   .container {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
+    padding: 10px;
+    /* Reducir el padding del contenedor para pantallas más pequeñas */
   }
-  
-  .row {
-    display: flex;
-    flex-wrap: wrap;
-    margin: -10px;
-  }
-  
+
   .col-lg-6,
   .col-md-8,
   .col-lg-3,
   .col-md-2,
   .col-lg-2 {
-    flex-basis: 0;
-    flex-grow: 1;
-    max-width: 100%;
-    padding: 10px;
+    flex-basis: 100%;
+    /* Hacer que las columnas ocupen todo el ancho en pantallas más pequeñas */
   }
-  
-  .entrada {
-    padding: 20px;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  .titulo {
-    font-size: 18px;
-    color: #333;
-    margin-bottom: 10px;
-  }
-  
-  .contenido {
-    font-size: 14px;
-    color: #666;
-    line-height: 1.5;
-  }
-  
+
   .custom-button {
-    display: inline-block;
-    margin-top: 10px;
-    padding: 8px 16px;
-    background-color: #c5b07c;
-    color: #111;
-    text-decoration: none;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+    display: block;
+    /* Mostrar los botones en bloque en pantallas más pequeñas */
+    width: 100%;
+    /* Ajustar el ancho de los botones para ocupar todo el espacio disponible */
   }
-  
-  .custom-button:hover {
-    background-color: #f7dfa5;
-  }
-  
-  /* Media queries para adaptar estilos a celulares y tablets */
-  @media (max-width: 400px) {
-    .container {
-      padding: 10px; /* Reducir el padding del contenedor para pantallas más pequeñas */
-    }
-  
-    .col-lg-6,
-    .col-md-8,
-    .col-lg-3,
-    .col-md-2,
-    .col-lg-2 {
-      flex-basis: 100%; /* Hacer que las columnas ocupen todo el ancho en pantallas más pequeñas */
-    }
-  
-    .custom-button {
-      display: block; /* Mostrar los botones en bloque en pantallas más pequeñas */
-      width: 100%; /* Ajustar el ancho de los botones para ocupar todo el espacio disponible */
-    }
-  }
-  
-  
-  
+}
