--- a/css/lecturas.css
+++ b/css/lecturas.css
@@ -1,8 +1,7 @@
-
 /* --------------------------------------------------------------------------Estilos Lecturas ----------------------------------------------------------------------------------------------*/
 
 
- /* Estilos para el contenedor principal */
+/* Estilos para el contenedor principal */
 .contenedor-principal-lecturas {
   display: flex;
   justify-content: center;
@@ -17,22 +16,24 @@
 /* Estilos para los contenedores de las cards */
 .contenedor-lecturas {
   width: 300px;
-  height: 100%; 
+  height: 100%;
   background-color: #fff;
   border: 1px solid #ccc;
   border-radius: 4px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  margin: 10px; /* Espacio entre las cards */
-  transition: transform 0.3s ease; 
+  margin: 10px;
+  /* Espacio entre las cards */
+  transition: transform 0.3s ease;
   display: flex;
   align-items: flex-end;
   flex-direction: column;
-  overflow: hidden;   
+  overflow: hidden;
 }
 
 /* Efecto de transición al pasar el cursor sobre las cards */
 .contenedor-lecturas:hover {
-  transform: scale(1.05); /* Escala un 5% más grande al pasar el cursor */
+  transform: scale(1.05);
+  /* Escala un 5% más grande al pasar el cursor */
 }
 
 /* Estilos para los títulos de las cards */
@@ -51,7 +52,7 @@
   font-size: 16px;
   color: #666;
   line-height: 1.5;
-  height: auto; 
+  height: auto;
   padding: 20px;
 }
 
@@ -59,7 +60,7 @@
 .boton-leer-mas-lecturas {
   display: flex;
   justify-content: center;
-  align-items: center ;
+  align-items: center;
   padding: 8px 20px;
   background-color: #e6490b;
   color: #fff;
@@ -78,19 +79,23 @@
 .contenedor-lecturas img {
   max-width: 100%;
   height: auto;
-  object-fit: cover; 
+  object-fit: cover;
   border-radius: 4px 4px 0 0;
 }
 
 /* Media Query para dispositivos con un ancho máximo de 400px */
 @media screen and (max-width: 400px) {
   .contenedor-lecturas {
-    width: 100%; /* El ancho máximo será el 100% en pantallas más pequeñas */
-    margin: 5px; /* Ajusta el espacio entre las cards en pantallas más pequeñas */
+    width: 100%;
+    /* El ancho máximo será el 100% en pantallas más pequeñas */
+    margin: 5px;
+    /* Ajusta el espacio entre las cards en pantallas más pequeñas */
   }
 
   .boton-leer-mas-lecturas {
-    width: 80%; /* Ajusta el ancho del botón en pantallas más pequeñas */
-    margin-left: 10px; /* Ajusta el margen izquierdo del botón en pantallas más pequeñas */
+    width: 80%;
+    /* Ajusta el ancho del botón en pantallas más pequeñas */
+    margin-left: 10px;
+    /* Ajusta el margen izquierdo del botón en pantallas más pequeñas */
   }
 }
