--- a/css/recomendada.css
+++ b/css/recomendada.css
@@ -15,7 +15,7 @@
   border-radius: 10px;
   border: 20px solid #ccc;
   animation: aparecer 1s forwards;
-  margin: auto; 
+  margin: auto;
   margin-top: 33px;
   margin-bottom: 25px;
 }
@@ -39,15 +39,19 @@
 }
 
 .contenido-libro {
-  flex: 1; /* Para que ocupe el espacio restante en el contenedor */
-  padding: 0 20px; 
+  flex: 1;
+  /* Para que ocupe el espacio restante en el contenedor */
+  padding: 0 20px;
 }
 
 .imagen-libro {
-  flex-basis: 250px; /* Tamaño fijo para la imagen */
+  flex-basis: 250px;
+  /* Tamaño fijo para la imagen */
   display: flex;
-  justify-content: flex-end; /* Alineamos la imagen a la derecha */
-  align-items: center; /* Centramos verticalmente la imagen */
+  justify-content: flex-end;
+  /* Alineamos la imagen a la derecha */
+  align-items: center;
+  /* Centramos verticalmente la imagen */
 }
 
 @keyframes aparecer {
@@ -55,34 +59,35 @@
     opacity: 0;
     transform: translateX(-50px);
   }
+
   to {
     opacity: 1;
     transform: translateY(0);
   }
 }
 
-  /* -------------------------------------------------Estilos CSS Mobile  para lectura recomendada del mes ------------------------------------------------------------------------------------*/
-  
-  
-  @media screen and (max-width: 739px) {
-    .contenedor-libro {
-      flex-direction: column; 
-      padding: 40px; 
-    }
-  
-    .malaz {
-      width: 150px; 
-      height: auto;
-      padding: 5px; 
-      border-radius: 10%; 
-    }
-  
-    .contenido-libro {
-      padding: 10px; 
-    }
-  
-    .imagen-libro {
-      flex-basis: 100%; 
-      justify-content: center; 
-    }
+/* -------------------------------------------------Estilos CSS Mobile  para lectura recomendada del mes ------------------------------------------------------------------------------------*/
+
+
+@media screen and (max-width: 739px) {
+  .contenedor-libro {
+    flex-direction: column;
+    padding: 40px;
   }
+
+  .malaz {
+    width: 150px;
+    height: auto;
+    padding: 5px;
+    border-radius: 10%;
+  }
+
+  .contenido-libro {
+    padding: 10px;
+  }
+
+  .imagen-libro {
+    flex-basis: 100%;
+    justify-content: center;
+  }
+}
