--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,8 +3,7 @@
 /* Importar los estilos de las fuentes */
 @import "fonts.css";
 
-/* Importar los estilos del encabezado */
-@import "header.css";
+/* Importar los estilos o */
 @import "blog.css";
 @import "contacto.css";
 @import "desafios.css";
