--- a/css/home.css
+++ b/css/home.css
@@ -37,7 +37,32 @@ header {
   padding: 1rem;
   font-size: 1.9rem;
 }
+/* Estilos para el menú hamburguesa */
+.navbar {
+  background-color: #333;
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+}
 
+.nav-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+.nav-list li {
+  margin-right: 20px;
+}
+
+.nav-list a {
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+}
 /* Estilos para el logo */
 header img {
   width: 100px;
