--- a/sass/componentes/_desafios.scss
+++ b/sass/componentes/_desafios.scss
@@ -1,4 +1,6 @@
-// Estilos Desafíos
+/* Estilos comunes para todos los tamaños de pantalla */
+
+
 .desafio {
   display: flex;
   justify-content: center;
@@ -40,14 +42,12 @@
   justify-content: space-between;
 }
 
-// Estilos para las imágenes dentro de los contenedores
 .contenedor-desafio img {
   max-width: 100%;
   height: auto;
   border-radius: 4px 4px 0 0;
 }
 
-// Estilos para los elementos dentro de cada contenedor
 .titulo-desafio {
   font-size: 24px;
   color: #333;
@@ -69,17 +69,44 @@
   color: #fff;
   text-decoration: none;
   border-radius: 5px;
-
-  &:hover {
-    background-color: #e28f12;
-  }
 }
 
-// Media queries para adaptar estilos a tablets y celulares
-@media (width: 400px) {
+.boton-leer-mas-desafio:hover {
+  background-color: #e28f12;
+}
+
+.navbar {
+  background-color: #333;
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+}
+
+.nav-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+.nav-list li {
+  margin-right: 20px;
+}
+
+.nav-list a {
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+}
+
+/* Media query para adaptar estilos a dispositivos móviles */
+@media (max-width: 480px) {
   .grid-container-desafio {
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: 1fr;
     max-width: 100%;
     padding: 10px;
   }
 }
+
