--- a/css/desafios.css
+++ b/css/desafios.css
@@ -1,4 +1,6 @@
-/* -----------------------------------------------------------------------Estilos Desafios -------------------------------------------------------------------------------------------------*/
+/* Estilos comunes para todos los tamaños de pantalla */
+
+
 .desafio {
   display: flex;
   justify-content: center;
@@ -13,12 +15,10 @@
 @keyframes fadeIn {
   from {
     opacity: 0;
-    /* Al inicio de la animación, la opacidad es 0 (transparente) */
   }
 
   to {
     opacity: 1;
-    /* Al final de la animación, la opacidad es 1 (sólido) */
   }
 }
 
@@ -42,14 +42,12 @@
   justify-content: space-between;
 }
 
-/* Estilos para las imágenes dentro de los contenedores */
 .contenedor-desafio img {
   max-width: 100%;
   height: auto;
   border-radius: 4px 4px 0 0;
 }
 
-/* Estilos para los elementos dentro de cada contenedor */
 .titulo-desafio {
   font-size: 24px;
   color: #333;
@@ -77,14 +75,37 @@
   background-color: #e28f12;
 }
 
-/* Media queries para adaptar estilos a tablets y celulares */
-@media (width: 400px) {
+.navbar {
+  background-color: #333;
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+}
+
+.nav-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+.nav-list li {
+  margin-right: 20px;
+}
+
+.nav-list a {
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+}
+
+/* Media query para adaptar estilos a dispositivos móviles */
+@media (max-width: 480px) {
   .grid-container-desafio {
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    /* Ajustar el tamaño de las columnas para pantallas más pequeñas */
+    grid-template-columns: 1fr;
     max-width: 100%;
-    /* El ancho máximo será el 100% en pantallas más pequeñas */
     padding: 10px;
-    /* Reducir el padding del contenedor para pantallas más pequeñas */
   }
 }
