--- a/css/lecturas.css
+++ b/css/lecturas.css
@@ -3,8 +3,8 @@
 /* Estilo personalizado para la tarjeta */
 .custom-card img {
   width: 100%;
-  height: 500px;
-  object-fit: cover;
+  height: 200px;
+  object-fit: contain;
 }
 
 
@@ -46,4 +46,31 @@
     margin-left: 10px;
     /* Ajusta el margen izquierdo del botón en pantallas más pequeñas */
   }
+}
+
+/* Estilos para el menú hamburguesa */
+.navbar {
+  background-color: #333;
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+}
+
+.nav-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+.nav-list li {
+  margin-right: 20px;
+}
+
+.nav-list a {
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
 }
